--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     margin: 0;
 }
 
+body * {
+    border:red solid 2px;
+}
+
 body {
     background: #e9e2d5;
     font-family: 'Rubik', sans-serif;
@@ -113,6 +117,7 @@ p {
     background-color: white;
     color: black;
     border-radius: 0.5rem;
+    width: auto;
 }
 
 
@@ -162,23 +167,70 @@ input, textarea {
 textarea::-webkit-scrollbar{
     width: 4px;
 }
-.center {
-    text-align: center;
-}
-
-input[type="submit"]{ 
-   text-align: center;
-   margin-top: 30px;
-   width: 90%;
-   max-width: 200px;
-   color: black;
-   font-size: 17px;
-   cursor: pointer;
-   border-radius: 3px;
-   background-color: white;
-}
 
 #submit-section{
     display:flex;
     justify-content: center;
+}
+
+#hero-container {
+    display:flex;
+    height: 70vh;
+    margin: 10vh -10vw;
+    gap: 5vh;
+    width: 80vw;
+}
+
+#hero-text {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+    gap: 5vh;
+}
+
+#hero-image {
+    display:flex;
+    align-items: center;
+}
+.big-image {
+    width: 30vw;
+}
+#hero-button {
+    text-decoration: none;
+    border-radius: 1rem;
+    padding: 1rem;
+    font-size: 2rem;
+    background-color: #d95d68;
+    color: white;
+    border-radius: 0.5rem;
+}
+
+#container-two {
+    margin: 0 -10vw 0 -10vw;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 10vw;
+}
+
+.home-link{
+    text-decoration: none;
+    border-radius: 1rem;
+    padding: 1rem;
+    font-size: 1.5rem;
+    background-color: #d95d68;
+    color: white;
+    border-radius: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.home-link:hover {
+    color: white;
+}
+#links {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
